# tract-plugin-pack

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  palette_mockup.html
.config/: nextest.toml
.github/workflows/: build.yml  ci.yml
bench-suite/: Cargo.toml
bench-suite/benches/: render.rs
docs/: README.md
docs/gain-brain/: gain-brain-manual.md
docs/gs-meter/: gs-meter-manual.md
docs/hd26/: hd26-manual.md
docs/imagine/: imagine-manual.md
docs/miff/: miff-manual.md
docs/multosis/: SCREENSHOTS.md  multosis-manual.md
docs/nap/: nap-manual.md
docs/pope-scope/: pope-scope-manual.md
docs/research/: 2026-05-new-audio-dsp-papers.md
docs/satch/: satch-manual.md
docs/six-pack/: six-pack-manual.md
docs/superpowers/plans/: 2026-03-19-param-dial.md  2026-03-19-stft-magnitude-filtering.md  2026-03-20-egui-port.md  2026-03-20-oversampling.md  2026-03-21-workspace-restructure.md  2026-03-22-gain-brain.md  2026-03-22-lufs-gain-matching.md  2026-03-22-tiny-skia-widgets.md  2026-03-23-satch.md  2026-03-23-tinylimit.md  2026-03-29-gainbrain-cumulative-delta-protocol.md  2026-03-29-pope-scope.md  2026-04-01-warp-zone.md  2026-04-19-tiny-skia-text-entry.md  2026-04-19-wavetable-filter-tiny-skia-port.md  2026-04-26-six-pack.md  2026-05-05-imagine.md  2026-05-15-dropdown-widget.md  2026-05-16-miff.md  2026-05-16-mseg-editor-core.md  2026-05-16-mseg-editor.md  2026-05-16-tract-dsp-extraction.md  2026-05-16-tract-dsp-window-boxcar.md  2026-05-17-multosis-phase-1a.md  2026-05-17-multosis-phase-1b-i.md  2026-05-17-multosis-phase-1b-ii-a.md  2026-05-17-multosis-phase-1b-ii-b-1.md  2026-05-17-multosis-phase-1b-ii-b-2.md  2026-05-17-tract-dsp-fir-stft.md  2026-05-17-tract-dsp-stft-analyzer.md  2026-05-18-multosis-connection-indicators.md  2026-05-18-multosis-grid-interaction.md  2026-05-18-multosis-grid-layout.md  2026-05-18-multosis-phase-1b-ii-b-3.md  2026-05-18-multosis-phase-1b-ii-b-4.md  2026-05-18-multosis-phase-2a.md  2026-05-18-multosis-region-corner-resize.md  (+17 more)
docs/tinylimit/: tinylimit-manual.md
docs/warp-zone/: warp-zone-manual.md
docs/wavetable-filter/: wavetable-filter-manual.md
gain-brain/: Cargo.toml
gain-brain/src/: editor.rs  groups.rs  lib.rs  main.rs
gs-meter/: Cargo.toml
gs-meter/src/: editor.rs  lib.rs  lufs.rs  main.rs  meter.rs  widgets.rs
hd26/: Cargo.toml
hd26/benches/: dsp.rs
hd26/examples/: profile.rs
hd26/src/: delay.rs  dimension.rs  editor.rs  hyper.rs  lfo.rs  lib.rs  main.rs  transient.rs
imagine/: Cargo.toml
imagine/examples/: imagine_profile.rs  profile.rs
imagine/src/: bands.rs  crossover.rs  decorrelator.rs  editor.rs  hilbert.rs  lib.rs  main.rs  midside.rs  polar_rays.rs  spectrum.rs  theme.rs  vectorscope.rs
imagine/src/editor/: band_strip.rs  global_strip.rs  spectrum_view.rs  vectorscope_view.rs
miff/: Cargo.toml
miff/examples/: miff_profile.rs
miff/src/: convolution.rs  editor.rs  kernel.rs  lib.rs  main.rs
miff/src/editor/: response_view.rs
multosis/: BACKLOG.md  Cargo.toml
multosis/benches/: dsp.rs  effects.rs
multosis/examples/: diode_profile.rs  ladder_profile.rs  reverb_profile.rs  spectral_stretch_profile.rs
multosis/src/: clock.rs  compressor.rs  editor.rs  effects.rs  engine.rs  grid.rs  handoff.rs  lib.rs  main.rs  modulation.rs  playhead_display.rs  propagation.rs  randomize.rs  region.rs  seq_status.rs  undo.rs  wavefront_display.rs
multosis/src/editor/: effect_editor.rs  grid_view.rs  toolbar.rs  track_list.rs
multosis/src/effects/: auto_pan.rs  bitcrush.rs  chorus.rs  comb.rs  compressor.rs  delay.rs  diode.rs  distortion.rs  downsample.rs  flanger.rs  fm.rs  frequency_shift.rs  gate.rs  haas.rs  ladder.rs  limiter.rs  mod.rs  none.rs  phaser.rs  phaser_filter.rs  pitch_shift.rs  plate.rs  repeat.rs  reverb.rs  ring.rs  sallen_key.rs  satch.rs  spectral_bandpass.rs  spectral_cascade.rs  spectral_compress.rs  spectral_corrupt.rs  spectral_lofi.rs  spectral_mirror.rs  spectral_reverb.rs  spectral_rotate.rs  spectral_scatter.rs  spectral_shift.rs  spectral_smear.rs  spectral_spread.rs  spectral_stretch.rs  (+11 more)
nap/: Cargo.toml
nap/benches/: dsp.rs
nap/examples/: nap_profile.rs
nap/src/: coloration.rs  editor.rs  engine.rs  handoff.rs  ir.rs  lib.rs  main.rs  rng.rs  sequence.rs  theme.rs
nih-plug-widgets/: Cargo.toml
nih-plug-widgets/src/: lib.rs  param_dial.rs  style.css
pope-scope/: Cargo.toml
pope-scope/benches/: dsp.rs
pope-scope/src/: controls.rs  editor.rs  lib.rs  main.rs  renderer.rs  ring_buffer.rs  snapshot.rs  store.rs  theme.rs  time_mapping.rs
satch/: Cargo.toml
satch/src/: editor.rs  lib.rs  main.rs  spectral.rs
six-pack/: Cargo.toml
six-pack/examples/: six_pack_profile.rs
six-pack/src/: bands.rs  editor.rs  lib.rs  main.rs  oversampling.rs  saturation.rs  spectrum.rs  svf.rs
src/: editor.rs  lib.rs  oversampler.rs  style.css  wavetable.rs
src/editor/: filter_response_view.rs  param_dial.rs  wavetable_view.rs
tests/fixtures/: phaseless-bass.wt
tiny-skia-widgets/: Cargo.toml
tiny-skia-widgets/src/: axis.rs  controls.rs  drag.rs  dropdown.rs  editor_base.rs  grid_selector.rs  lib.rs  param_dial.rs  primitives.rs  resize_grip.rs  test_font.rs  text.rs  text_edit.rs
tiny-skia-widgets/src/mseg/: editor.rs  mod.rs  randomize.rs  render.rs
tinylimit/: Cargo.toml
tinylimit/examples/: tinylimit_profile.rs
tinylimit/src/: editor.rs  lib.rs  limiter.rs  main.rs  true_peak.rs
tract-dsp/: Cargo.toml
tract-dsp/benches/: dsp.rs
tract-dsp/examples/: tract_dsp_profile.rs
tract-dsp/src/: boxcar.rs  db.rs  fast_math.rs  fir.rs  hilbert.rs  lib.rs  partitioned_conv.rs  spectral_clipper.rs  spectral_engine.rs  spectral_shifter.rs  spsc.rs  stft.rs  stft_analysis.rs  true_peak.rs  window.rs
warp-zone/: Cargo.toml
warp-zone/benches/: dsp.rs
warp-zone/src/: editor.rs  lib.rs  main.rs  spectral.rs
wavetable-filter/: Cargo.toml  build.rs
wavetable-filter/benches/: dsp.rs
wavetable-filter/src/: editor.rs  lib.rs  main.rs  wavetable.rs
wavetable-filter/src/editor/: filter_response_view.rs  wavetable_view.rs
xtask/src/: main.rs
(+49 files in other folders)
