[workspace]
members = ["nih-plug-widgets", "wavetable-filter", "gs-meter", "gain-brain", "tinylimit", "satch", "pope-scope", "warp-zone", "tiny-skia-widgets", "xtask"]
exclude = ["nih-plug"]
resolver = "2"

[profile.release]
lto = true
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
