[package]
name = "gain-brain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "gain-brain"
path = "src/main.rs"

[dependencies]
nih_plug = { git = "https://github.com/davemollen/nih-plug.git", branch = "finish-vst3-pr", features = ["standalone"] }
# Softbuffer GUI (CPU rendering, no GPU)
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "9a0b42c09d712777b2edb4c5e0cb6baf21e988f0", features = ["opengl"] }
softbuffer = { version = "0.4", default-features = false, features = ["kms", "x11"] }
raw-window-handle = "0.5"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
tiny-skia = "0.11"
fontdue = "0.9"
keyboard-types = "0.6"
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"

[package.metadata.bundler]
name = "Gain Brain"
company = "mpd"
description = "A gain utility with cross-instance group linking"
license = "GPL-3.0-or-later"
version = "0.1.0"
