[package]
name = "multosis"
version = "0.1.0"
edition = "2021"
description = "A multi-FX routing sequencer"
license = "GPL-3.0-or-later"

# Milestone 1a is library-only: plain rlib, no cdylib/bin, no nih-plug.
# Milestone 1b adds the [lib] crate-type, the [[bin]], and the plugin deps.

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
