[package]
name = "nih-plug-widgets"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nih_plug = { git = "https://github.com/xxx/nih-plug.git", branch = "finish-vst3-pr", features = ["simd"] }
nih_plug_vizia = { git = "https://github.com/xxx/nih-plug.git", branch = "finish-vst3-pr" }
