[package]
name = "tract-dsp"
version = "0.1.0"
edition = "2021"
description = "Shared GUI-free DSP primitives for the tract-plugin-pack workspace"
license = "GPL-3.0-or-later"

# No [lib] section: default rlib. No cdylib, no bin — this is a library only.
# No [dependencies]: pure std + std::simd (nightly, pinned by rust-toolchain.toml).

[features]
# Gates the FFT-based `stft` module so non-FFT consumers don't pull realfft/rustfft.
stft = ["dep:realfft", "dep:rustfft"]
# Gates the `stft_analysis` module (rustfft only — complex transforms, no realfft).
stft-analysis = ["dep:rustfft"]

[dependencies]
realfft = { version = "3.3", optional = true }
rustfft = { version = "6.2", optional = true }
