[package]
name = "tract-dsp"
version = "0.1.0"
edition = "2021"
description = "Shared GUI-free DSP primitives for the tract-plugin-pack workspace"
license = "GPL-3.0-or-later"

# No [lib] section: default rlib. No cdylib, no bin — this is a library only.
# No [dependencies]: pure std + std::simd (nightly, pinned by rust-toolchain.toml).

# The profiling harness drives the StftAnalyzer hot path, so it needs the
# `stft-analysis` feature; declared here so a featureless build skips it.
[[example]]
name = "tract_dsp_profile"
required-features = ["stft-analysis"]

[features]
# Gates the FFT-based `stft` module so non-FFT consumers don't pull realfft/rustfft.
stft = ["dep:realfft", "dep:rustfft"]
# Gates the `stft_analysis` module (rustfft only — complex transforms, no realfft).
stft-analysis = ["dep:rustfft"]
spectral-engine = ["stft-analysis"]
# Gates the `partitioned_conv` module (uniformly-partitioned FFT convolution).
partitioned-conv = ["dep:realfft", "dep:rustfft"]

[dependencies]
realfft = { version = "3.3", optional = true }
rustfft = { version = "6.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# Dev-only, needed solely to name `Complex<f32>` in the `spectral-engine`
# bench's `SpectralTransform` impl. Never reaches the published library or
# downstream consumers, and the workspace lock file already carries rustfft.
rustfft = "6.2"

# Per-sample DSP micro-benchmarks (criterion). Default features cover the
# dependency-free primitives; pass `--features stft,spectral-engine` to add the
# FFT-backed groups. See benches/dsp.rs for the run command.
[[bench]]
name = "dsp"
harness = false
