[package]
name = "wavetable-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "wavetable-filter"
path = "src/main.rs"

[dependencies]
nih-plug-widgets = { path = "../nih-plug-widgets" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["simd", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
hound = "3.5"
atomic_float = "1.0"
rfd = "0.17.2"
realfft = "3.3"
rustfft = "6.2"

[package.metadata.bundler]
name = "Wavetable Filter"
company = "mpd"
description = "A wavetable-based filter plugin"
license = "GPL-3.0-or-later"
version = "0.1.0"
